--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="check1">
-                <label class="form-check-label" for="check1">
+                <input class="form-check-input" type="checkbox" value="" id="check2">
+                <label class="form-check-label" for="check2">
                     la mama
                 </label>
             </div>
@@ -63,6 +63,7 @@
                 <input class="form-check-input" type="checkbox" id="checkbox3" value="111111">
                 <label class="form-check-label" for="checkbox3">camaro</label>
             </div>
+            <button type"submit" class= "btn btn-danger">Enviar</button>
           </form>
     </main>
 
